--- a/sass/components/_container-button.scss
+++ b/sass/components/_container-button.scss
@@ -7,7 +7,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../../img/Mobile/optimision/Header-img.png");
+    url("../img/Mobile/optimision/Header-img.png");
   background-size: cover;
 }
 
@@ -19,7 +19,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../../img/Mobile/optimision/Header-img@2x.png");
+      url("../img/Mobile/optimision/Header-img@2x.png");
   }
 }
 
@@ -29,7 +29,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../../img/Tablet/optimisio/Header-img.png");
+      url("../img/Tablet/optimisio/Header-img.png");
   }
 }
 
@@ -41,7 +41,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../../img/Tablet/optimisio/Header-img@2x.png");
+      url("../img/Tablet/optimisio/Header-img@2x.png");
   }
 }
 
@@ -51,7 +51,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../../img/Desktop/optimision/Header-img.png");
+      url("../img/Desktop/optimision/Header-img.png");
   }
 }
 
