--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -941,9 +941,9 @@ body {
 }
 
 .mobile-menu {
-  position: fixed;
+  position: absolute;
   width: 100%;
-  height: 100%;
+  max-width: 480px;
   top: 0;
   left: 50%;
   transform: translateX(-50%) translateY(-100%);
