--- a/sass/layaut/_mobile-menu.scss
+++ b/sass/layaut/_mobile-menu.scss
@@ -14,9 +14,9 @@
   height: 40px;
 }
 .mobile-menu {
-  position: fixed;
+  position: absolute;
   width: 100%;
-  height: 100%;
+  max-width: 480px;
   //height: 100vh;
   top: 0;
   left: 50%;
