--- a/css/main.css
+++ b/css/main.css
@@ -451,13 +451,7 @@ body {
   letter-spacing: 0.03em;
 }
 
-.container-item {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -15px;
-}
-
-.container-item .main-li {
+.main-li {
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -467,6 +461,11 @@ body {
   .container-item .main-li {
     margin: 15px;
     width: calc((100% - 15px * 4) / 2);
+  }
+  .container-item {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
   }
 }
 
@@ -478,6 +477,13 @@ body {
   .container-item .main-li {
     margin: 15px;
     width: calc((100% - 15px * 8) / 4);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .container-item {
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -1091,7 +1097,7 @@ body {
 }
 
 .form-mail {
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
