--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -841,7 +841,7 @@ body {
 }
 
 .form-mail {
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
