--- a/sass/layaut/_aside.scss
+++ b/sass/layaut/_aside.scss
@@ -10,18 +10,14 @@
   text-align: center;
   letter-spacing: 0.03em;
 }
-.container-item {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -15px;
 
-  .main-li {
-    background: #ffffff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-  }
+.main-li {
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
+
 //&:not(:last-child) {
 // margin-right: 30px;
 @media screen and (min-width: 768px) {
@@ -29,14 +25,26 @@
     margin: 15px;
     width: calc((100% - 15px * 4) / 2);
   }
+  .container-item {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .aside {
     padding: 94px 0;
     margin: 0;
   }
+
   .container-item .main-li {
     margin: 15px;
     width: calc((100% - 15px * 8) / 4);
+  }
+}
+@media screen and (max-width: 767px) {
+  .container-item {
+    display: flex;
+    flex-direction: column;
   }
 }
