--- a/sass/layaut/_container-form.scss
+++ b/sass/layaut/_container-form.scss
@@ -22,7 +22,7 @@
   align-items: center;
 }
 .form-mail {
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -66,9 +66,9 @@
   }
 }
 @media screen and (min-width: 1200px) {
-   .container-form {
+  .container-form {
     margin-left: auto;
-   }
+  }
 
   .box-mail {
     display: flex;
