--- a/css/main.css
+++ b/css/main.css
@@ -904,6 +904,8 @@ body {
     flex-basis: calc((100% - 15px * 12) / 6);
     height: 90px;
     margin: 15px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
