--- a/sass/layaut/_customers-section.scss
+++ b/sass/layaut/_customers-section.scss
@@ -90,5 +90,8 @@
     flex-basis: calc((100% - 15px * 12) / 6);
     height: 90px;
     margin: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    
   }
 }
