--- a/sass/components/_container-button.scss
+++ b/sass/components/_container-button.scss
@@ -70,11 +70,11 @@
 .container-button {
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 200px 0;
+  // padding: 200px 0;
   text-align: center;
   // max-width: 1600px;
   // min-height: 600px;
-  margin: 0 auto;
+  // margin: 0 auto;
   margin-bottom: 60px;
 }
 .container-button h1 {
