--- a/css/main.css
+++ b/css/main.css
@@ -692,8 +692,16 @@ body {
   }
 }
 
-.list-features {
-  flex-direction: column;
+@media screen and (max-width: 1199px) {
+  .list-features {
+    flex-direction: column;
+    margin-bottom: 30px;
+  }
+}
+
+.list-features .text-p {
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 .features-icon {
