--- a/sass/layaut/_list-features.scss
+++ b/sass/layaut/_list-features.scss
@@ -15,8 +15,16 @@
     margin: 15px;
   }
 }
-.list-features {
-  flex-direction: column;
+@media screen and (max-width: 1199px) {
+  .list-features {
+    flex-direction: column;
+    margin-bottom: 30px;
+  }
+}
+
+.list-features .text-p {
+  font-size: 14px;
+  line-height: 1.71;
 }
 // .list-features:not(:last-child) {
 //   margin-right: 30px;
