--- a/sass/layaut/_our-team.scss
+++ b/sass/layaut/_our-team.scss
@@ -5,13 +5,13 @@
     margin-bottom: 16px;
   }
 }
- 
 
 .col .text-title {
   margin-bottom: 10px;
 }
 .col .pic {
   border-radius: 0px;
+  width: 100%;
 }
 
 .col .name-title {
