--- a/css/main.css
+++ b/css/main.css
@@ -252,6 +252,8 @@ body {
 }
 
 .button-main {
+  width: 220px;
+  height: 50px;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.88;
@@ -804,6 +806,7 @@ body {
 
 .col .pic {
   border-radius: 0px;
+  width: 100%;
 }
 
 .col .name-title {
@@ -920,6 +923,7 @@ body {
 
 @media screen and (max-width: 1200px) {
   .container-footer {
+    width: 100%;
     display: flex;
     background: #2f303a;
     padding: 60px 0;
@@ -1042,6 +1046,9 @@ body {
 }
 
 @media screen and (min-width: 768px) {
+  .form-mail {
+    width: 450px;
+  }
   .wrap {
     max-width: 610px;
     margin: 0 auto;
@@ -1091,6 +1098,7 @@ body {
     align-items: center;
   }
   .box-mail {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1100,6 +1108,7 @@ body {
 }
 
 .footer-form {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1118,6 +1127,12 @@ body {
   background: #2f303a;
   color: var(--akcent-background);
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .form-mail {
+    width: 450;
+  }
 }
 
 .title-form {
