--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -656,6 +656,7 @@ body {
 
 @media screen and (max-width: 1200px) {
   .container-footer {
+    width: 100%;
     display: flex;
     background: #2f303a;
     padding: 60px 0;
@@ -778,6 +779,9 @@ body {
 }
 
 @media screen and (min-width: 768px) {
+  .form-mail {
+    width: 450px;
+  }
   .wrap {
     max-width: 610px;
     margin: 0 auto;
@@ -827,6 +831,7 @@ body {
     align-items: center;
   }
   .box-mail {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -836,6 +841,7 @@ body {
 }
 
 .footer-form {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -854,6 +860,12 @@ body {
   background: #2f303a;
   color: var(--akcent-background);
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .form-mail {
+    width: 450;
+  }
 }
 
 .title-form {
