--- a/sass/components/_container-button.scss
+++ b/sass/components/_container-button.scss
@@ -90,6 +90,8 @@
   color: var(--color-background--container);
 }
 .button-main {
+  width: 220px;
+  height: 50px;
   @include font();
   display: inline-block;
   padding: 10px 32px;
