--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,7 +16,7 @@
 @import "./components/social-list-icon";
 @import "./components/subtitle";
 @import "./components/container-button";
-@import "./components/\ text-decoration";
+@import "./components/text-decoration";
 
 //LAYOUT
 @import "./layaut/mobile-menu";
