--- a/css/main.css
+++ b/css/main.css
@@ -19,8 +19,7 @@ ol {
   padding: 0;
 }
 
-img,
-svg {
+img {
   display: block;
   max-width: 100%;
   height: auto;
@@ -105,6 +104,13 @@ body {
   font-family: var(--font-family);
   letter-spacing: 0.03em;
   color: var(--color-focus);
+  padding: 16px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .logo-link {
+    padding: 26px 0;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -199,6 +205,7 @@ body {
   margin: 0 auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/Mobile/optimision/Header-img.png");
   background-size: cover;
+  background-position: center;
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px), screen and (min-resolution: 192dpi) and (min-width: 320px), screen and (min-resolution: 2dppx) and (min-width: 320px) {
@@ -221,6 +228,7 @@ body {
 
 @media screen and (min-width: 1200px) {
   .container-button {
+    padding: 200px 0;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/Desktop/optimision/Header-img.png");
   }
 }
@@ -235,7 +243,6 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
-  margin-bottom: 60px;
 }
 
 .container-button h1 {
@@ -249,6 +256,12 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--color-background--container);
+}
+
+@media screen and (max-width: 479px) {
+  .container-button h1 {
+    font-size: 21px;
+  }
 }
 
 .button-main {
@@ -314,9 +327,12 @@ body {
 }
 
 .mobile-menu {
-  position: absolute;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
   width: 100%;
   max-width: 480px;
+  height: 100vh;
   top: 0;
   left: 50%;
   transform: translateX(-50%) translateY(-100%);
@@ -324,6 +340,7 @@ body {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
   padding: 48px 40px;
   transition: transform 500ms linear;
+  z-index: 999;
 }
 
 .li-studio {
@@ -335,7 +352,7 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 40px;
-  line-height: 1.18;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.02em;
 }
@@ -349,21 +366,21 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 40px;
-  line-height: 1.18;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   color: #212121;
 }
 
-.li-contacty {
-  margin-bottom: 302px;
+.list-contakt-menu {
+  margin-top: auto;
 }
 
-.li-contacty .link-contacty {
+.link-contacty {
   display: flex;
   font-style: normal;
   font-weight: 500;
   font-size: 40px;
-  line-height: 1.18;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   color: #212121;
 }
@@ -437,6 +454,21 @@ body {
   border: 1px solid rgba(33, 33, 33, 0.2);
   margin-right: 10px;
   margin-left: 10px;
+}
+
+@media screen and (max-width: 479px) {
+  .mobile-menu .size-menu {
+    font-size: 30px;
+    line-height: 1.17;
+  }
+  .mobile-menu .size-menu-contakt {
+    font-size: 20px;
+    line-height: 1.17;
+  }
+  .mobile-menu .menu-social-link {
+    font-size: 9px;
+    line-height: 1.2;
+  }
 }
 
 .aside {
@@ -514,7 +546,7 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-main:hover, .link-main:focus, .link-main:target {
+.link-main:hover, .link-main:focus {
   color: var(--color-focus);
 }
 
@@ -723,8 +755,7 @@ body {
 
 @media screen and (min-width: 1200px) {
   .features {
-    padding: 0;
-    margin-bottom: 94px;
+    padding: 94px 0;
   }
   .list-features {
     flex-basis: calc((100% - 15px * 8) / 4);
@@ -1089,7 +1120,7 @@ body {
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1199px) {
   .container-form {
     display: flex;
     flex-direction: column;
@@ -1131,7 +1162,13 @@ body {
 
 @media screen and (min-width: 768px) {
   .form-mail {
-    width: 450;
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form-mail {
+    width: 355px;
   }
 }
 
