--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -19,8 +19,7 @@ ol {
   padding: 0;
 }
 
-img,
-svg {
+img {
   display: block;
   max-width: 100%;
   height: auto;
@@ -137,7 +136,7 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-main:hover, .link-main:focus, .link-main:target {
+.link-main:hover, .link-main:focus {
   color: var(--color-focus);
 }
 
@@ -557,6 +556,16 @@ body {
   margin-right: 8px;
 }
 
+@media screen and (max-width: 767px) {
+  .items-button .list-btn-portfolio:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
+}
+
+.items-button .main-li {
+  margin-bottom: 0;
+}
+
 .list-portfolio {
   display: flex;
   flex-wrap: wrap;
@@ -822,7 +831,7 @@ body {
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1199px) {
   .container-form {
     display: flex;
     flex-direction: column;
@@ -864,7 +873,13 @@ body {
 
 @media screen and (min-width: 768px) {
   .form-mail {
-    width: 450;
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form-mail {
+    width: 355px;
   }
 }
 
@@ -956,9 +971,12 @@ body {
 }
 
 .mobile-menu {
-  position: absolute;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
   width: 100%;
   max-width: 480px;
+  height: 100vh;
   top: 0;
   left: 50%;
   transform: translateX(-50%) translateY(-100%);
@@ -966,6 +984,7 @@ body {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
   padding: 48px 40px;
   transition: transform 500ms linear;
+  z-index: 999;
 }
 
 .li-studio {
@@ -977,7 +996,7 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 40px;
-  line-height: 1.18;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.02em;
 }
@@ -991,21 +1010,21 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 40px;
-  line-height: 1.18;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   color: #212121;
 }
 
-.li-contacty {
-  margin-bottom: 302px;
+.list-contakt-menu {
+  margin-top: auto;
 }
 
-.li-contacty .link-contacty {
+.link-contacty {
   display: flex;
   font-style: normal;
   font-weight: 500;
   font-size: 40px;
-  line-height: 1.18;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   color: #212121;
 }
@@ -1079,6 +1098,21 @@ body {
   border: 1px solid rgba(33, 33, 33, 0.2);
   margin-right: 10px;
   margin-left: 10px;
+}
+
+@media screen and (max-width: 479px) {
+  .mobile-menu .size-menu {
+    font-size: 30px;
+    line-height: 1.17;
+  }
+  .mobile-menu .size-menu-contakt {
+    font-size: 20px;
+    line-height: 1.17;
+  }
+  .mobile-menu .menu-social-link {
+    font-size: 9px;
+    line-height: 1.2;
+  }
 }
 
 button.btn {
@@ -1170,6 +1204,13 @@ button.current {
   font-family: var(--font-family);
   letter-spacing: 0.03em;
   color: var(--color-focus);
+  padding: 16px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .logo-link {
+    padding: 26px 0;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1221,5 +1262,10 @@ button.current {
 
 .social-list-link:hover, .social-list-link:focus {
   background-color: var(--color-focus);
+}
+
+.decor {
+  text-decoration: none;
+  list-style-type: none;
 }
 /*# sourceMappingURL=portfolio.css.map */
