--- a/sass/components/_container-button.scss
+++ b/sass/components/_container-button.scss
@@ -9,6 +9,7 @@
     ),
     url("../img/Mobile/optimision/Header-img.png");
   background-size: cover;
+  background-position: center;
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
@@ -47,6 +48,7 @@
 
 @media screen and (min-width: 1200px) {
   .container-button {
+    padding: 200px 0;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
@@ -75,7 +77,6 @@
   // max-width: 1600px;
   // min-height: 600px;
   // margin: 0 auto;
-  margin-bottom: 60px;
 }
 .container-button h1 {
   margin-right: auto;
@@ -88,7 +89,11 @@
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--color-background--container);
+  @media screen and(max-width:479px) {
+    font-size: 21px;
+  }
 }
+
 .button-main {
   width: 220px;
   height: 50px;
