--- a/sass/components/_logo-studio.scss
+++ b/sass/components/_logo-studio.scss
@@ -3,6 +3,10 @@
   font-family: var(--font-family);
   letter-spacing: 0.03em;
   color: var(--color-focus);
+  padding: 16px 0;
+  @media screen and (min-width: 768px) {
+    padding: 26px 0;
+  }
 }
 
 @media screen and (min-width: 1200px) {
