--- a/sass/layaut/_container-form.scss
+++ b/sass/layaut/_container-form.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1199px) {
   .container-form {
     display: flex;
     flex-direction: column;
@@ -37,7 +37,12 @@
 }
 @media screen and (min-width: 768px) {
   .form-mail {
-    width: 450;
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form-mail {
+    width: 355px;
   }
 }
 .title-form {
