--- a/sass/layaut/_header.scss
+++ b/sass/layaut/_header.scss
@@ -19,8 +19,7 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus,
-  &:target {
+  &:focus {
     color: var(--color-focus);
   }
   &:active {
