--- a/sass/layaut/_mobile-menu.scss
+++ b/sass/layaut/_mobile-menu.scss
@@ -14,10 +14,12 @@
   height: 40px;
 }
 .mobile-menu {
-  position: absolute;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
   width: 100%;
   max-width: 480px;
-  //height: 100vh;
+  height: 100vh;
   top: 0;
   left: 50%;
   transform: translateX(-50%) translateY(-100%);
@@ -26,6 +28,7 @@
     0px 1px 3px rgba(0, 0, 0, 0.16);
   padding: 48px 40px;
   transition: transform 500ms linear;
+  z-index: 999;
 }
 .li-studio {
   margin-bottom: 32px;
@@ -34,7 +37,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 40px;
-    line-height: 1.18;
+    line-height: 1.17;
     text-align: center;
     letter-spacing: 0.02em;
   }
@@ -46,23 +49,24 @@
     font-style: normal;
     font-weight: 500;
     font-size: 40px;
-    line-height: 1.18;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     color: #212121;
   }
 }
-.li-contacty {
-  margin-bottom: 302px;
-  .link-contacty {
-    display: flex;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 1.18;
-    letter-spacing: 0.02em;
-    color: #212121;
-  }
+.list-contakt-menu {
+  margin-top: auto;
 }
+.link-contacty {
+  display: flex;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
 .li-tel {
   margin-bottom: 32px;
   .link-tel {
@@ -126,4 +130,18 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   margin-right: 10px;
   margin-left: 10px;
+}
+@media screen and (max-width: 479px) {
+  .mobile-menu .size-menu {
+    font-size: 30px;
+    line-height: 1.17;
+  }
+  .mobile-menu .size-menu-contakt{
+    font-size: 20px;
+    line-height: 1.17;
+  }
+  .mobile-menu .menu-social-link{
+    font-size: 9px;
+    line-height: 1.2;
+  }
 }
