--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -25,4 +25,4 @@
 @import "./components/main-li";
 @import "./components/logo-studio";
 @import "./components/social-list-icon";
-//@import "./components/\ text-decoration;
+@import "./components/text-decoration";
