--- a/sass/components/_container-button.scss
+++ b/sass/components/_container-button.scss
@@ -1,6 +1,5 @@
 .container-button {
-  padding-top: 118px;
-  padding-bottom: 118px;
+  padding: 118px 0;
   height: 400px;
   margin: 0 auto;
   background-image: linear-gradient(
