--- a/sass/layaut/_list-features.scss
+++ b/sass/layaut/_list-features.scss
@@ -6,15 +6,15 @@
   .list-features-svg {
     display: flex;
     flex-wrap: wrap;
-    margin: -15px;
+    padding: 60px 0;
+    //margin: -15px;
   }
-}
-@media screen and (min-width: 768px) {
   .list-features {
     flex-basis: calc((100% - 15px * 4) / 2);
     margin: 15px;
   }
 }
+
 @media screen and (max-width: 1199px) {
   .list-features {
     flex-direction: column;
